Prepare for hosted demo

--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs webpack"
   },
   "dependencies": {
     "react": "^16.2.0",
