--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs webpack"
   },
   "dependencies": {
+    "js-sha1": "^0.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
