Added textfield example

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test BABEL_ENV=modules:commonjs jest",
     "test:release": "npm run test && npm run build && npm pack ./dist",
-    "build": "npm run build:commonjs && npm run build:es && npm run build:copy-files",
+    "build": "npm run build:commonjs && npm run build:es && npm run build:copy-files && npm run test",
     "build:commonjs": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs babel ./src --out-dir ./dist/ --ignore *.test.js",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=modules:es babel ./src --out-dir ./dist/es --ignore *.test.js",
     "build:copy-files": "node ./scripts/copy-files.js",
