--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "js-sha1": "^0.6.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-json-editor-ajrm": "^2.5.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.55",
