--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test BABEL_ENV=modules:commonjs jest",
     "test:watch": "cross-env NODE_ENV=test BABEL_ENV=modules:commonjs jest --watch",
-    "test:release": "npm run test && npm run build && npm pack ./dist",
+    "test:release": "npm run build && npm pack ./dist",
     "build": "npm run build:commonjs && npm run build:es && npm run build:copy-files && npm run test",
     "build:commonjs": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs babel ./src --out-dir ./dist/ --ignore *.test.js",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=modules:es babel ./src --out-dir ./dist/es --ignore *.test.js",
     "build:copy-files": "node ./scripts/copy-files.js",
-    "release": "npm run test && npm run build && npm publish ./dist"
+    "release": "npm run build && npm publish ./dist"
   },
   "peerDependencies": {
     "react": ">=16.2.0",
