Move packages into packages directory

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@react-formilicious/fields-bulma",
+  "name": "@react-formilicious/core",
   "version": "1.0.0",
-  "description": "Fields for react-formilicious, using the Bulma CSS framework. 🎨",
+  "description": "Easy to use, modular and simply delicious forms for React. 📝",
   "author": "PatrickSachs",
   "license": "MIT",
   "main": "index.js",
@@ -33,11 +33,10 @@
     "build": "npm run build:commonjs && npm run build:es && npm run build:copy-files && npm run test",
     "build:commonjs": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs babel ./src --out-dir ./dist/ --ignore *.test.js",
     "build:es": "cross-env NODE_ENV=production BABEL_ENV=modules:es babel ./src --out-dir ./dist/es --ignore *.test.js",
-    "build:copy-files": "node ../_system/scripts/copy-files.js",
+    "build:copy-files": "node ./../../scripts/copy-files.js",
     "release": "npm run build && npm publish ./dist"
   },
   "peerDependencies": {
-    "@react-formilicious/core": "file:../core",
     "react": ">=16.2.0",
     "react-dom": ">=16.2.0"
   },
