--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,63 +4,41 @@
   "description": "Easy to use, modular and simply delicious forms for React. 📝",
   "author": "PatrickSachs",
   "license": "MIT",
-  "main": "index.js",
-  "files": [
-    "*"
-  ],
-  "jest": {
-    "verbose": true,
-    "modulePathIgnorePatterns": [
-      "./dist/"
-    ],
-    "transform": {
-      "^.+\\.js$": "./test/jest.transform.js"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "testURL": "http://localhost",
-    "setupFiles": [
-      "./test/jest.setup.js"
-    ]
-  },
+  "main": "./src/index.js",
   "sideEffects": false,
   "scripts": {
-    "test": "cross-env NODE_ENV=test BABEL_ENV=modules:commonjs jest",
-    "test:watch": "cross-env NODE_ENV=test BABEL_ENV=modules:commonjs jest --watch",
-    "test:release": "npm run build && npm pack ./dist",
-    "build": "npm run build:commonjs && npm run build:es && npm run build:copy-files && npm run test",
-    "build:commonjs": "cross-env NODE_ENV=production BABEL_ENV=modules:commonjs babel ./src --out-dir ./dist/ --ignore *.test.js",
-    "build:es": "cross-env NODE_ENV=production BABEL_ENV=modules:es babel ./src --out-dir ./dist/es --ignore *.test.js",
-    "build:copy-files": "node ./../../scripts/copy-files.js",
-    "release": "npm run build && npm publish ./dist"
+    "test": "create-react-prototype test",
+    "build": "create-react-prototype build",
+    "release": "create-react-prototype release",
+    "watch": "create-react-prototype watch",
+    "pack": "create-react-prototype pack"
   },
   "peerDependencies": {
     "react": ">=16.2.0",
     "react-dom": ">=16.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-rc.1",
-    "@babel/core": "^7.0.0-rc.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-rc.1",
-    "@babel/plugin-transform-object-assign": "^7.0.0-rc.1",
-    "@babel/plugin-transform-runtime": "^7.0.0-rc.1",
-    "@babel/preset-env": "^7.0.0-rc.1",
-    "@babel/preset-react": "^7.0.0-rc.1",
-    "all-contributors-cli": "^5.4.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "cross-env": "^5.2.0",
-    "fs-extra": "^7.0.0",
+    "create-react-prototype": "file:..\\..\\..\\create-react-prototype",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "rimraf": "^2.6.2",
-    "jest": "^23.5.0"
+    "react-dom": "^16.4.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-rc.1",
     "classnames": "^2.2.6"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PatrickSachs/react-formilicious.git"
+  },
+  "keywords": [
+    "react",
+    "forms",
+    "forms-generator",
+    "react-formilicious"
+  ],
+  "bugs": {
+    "url": "https://github.com/PatrickSachs/react-formilicious/issues"
+  },
+  "homepage": "https://github.com/PatrickSachs/react-formilicious/wiki",
+  "generator": "create-react-prototype"
 }
