--- a/packages/bulma/package.json
+++ b/packages/bulma/package.json
@@ -26,7 +26,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-rc.1",
-    "classnames": "^2.2.6"
+    "classnames": "^2.2.6",
+    "react-frame-component": "^4.0.1"
   },
   "repository": {
     "type": "git",
