Core storybook for buttons

--- a/packages/core/storybook/package.json
+++ b/packages/core/storybook/package.json
@@ -6,10 +6,12 @@
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "@react-formilicious/core": "file:../dist",
+    "storybook-addon-jsx": "^5.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "scripts": {
-    "start": "start-storybook -p 9001 -c config"
+    "start": "start-storybook -p 9001 -c .config",
+    "build": "build-storybook -c .config -o dist"
   }
 }
