--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "files.exclude": {
     ".vscode": true,
+    "**/*.tgz": true,
     "**/dist": true,
-    "**/node_modules": true
+    "**/LICENSE": true,
+    "**/node_modules": true,
+    "**/package-lock.json": true,
+    "**/package.json": true
   }
 }
