--- a/packages/core/storybook/package.json
+++ b/packages/core/storybook/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@react-formilicious/core": "file:../dist",
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
-    "@react-formilicious/core": "file:../dist",
-    "storybook-addon-jsx": "^5.4.0",
+    "lorem-ipsum": "^1.0.6",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "storybook-addon-jsx": "^5.4.0"
   },
   "scripts": {
     "start": "start-storybook -p 9001 -c .config",
