--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
     "**/dist": true,
     "**/LICENSE": true,
     "**/node_modules": true,
-    "**/package-lock.json": true,
-    "**/package.json": true
+    "**/package-lock.json": true
   }
 }
