Add built storybooks in docs/ folder

--- a/packages/validator-pwned/storybook/package.json
+++ b/packages/validator-pwned/storybook/package.json
@@ -13,6 +13,6 @@
   },
   "scripts": {
     "start": "start-storybook -p 9003 -c .config",
-    "build": "build-storybook -c .config -o dist"
+    "build": "build-storybook -c .config -o ../../../docs/validator-pwned"
   }
 }
