--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "react-dom": ">=16.2.0"
   },
   "devDependencies": {
-    "create-react-prototype": "file:..\\..\\..\\create-react-prototype",
+    "create-react-prototype": "^1.0.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
