--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "react-dom": ">=16.2.0"
   },
   "devDependencies": {
-    "create-react-prototype": "^1.0.1",
+    "create-react-prototype": "1.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
@@ -40,5 +40,6 @@
     "url": "https://github.com/PatrickSachs/react-formilicious/issues"
   },
   "homepage": "https://github.com/PatrickSachs/react-formilicious/wiki",
+  "packageManager": "yarn",
   "generator": "create-react-prototype"
 }
