--- a/packages/bulma/package.json
+++ b/packages/bulma/package.json
@@ -19,8 +19,8 @@
     "react-dom": ">=16.2.0"
   },
   "devDependencies": {
-    "@react-formilicious/core": "link:../core/dist",
-    "create-react-prototype": "1.1.1",
+    "@react-formilicious/core": "file:../core/dist",
+    "create-react-prototype": "^1.2.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
@@ -33,5 +33,6 @@
     "type": "git",
     "url": "git+https://github.com/PatrickSachs/react-formilicious.git"
   },
+  "packageManager": "yarn",
   "generator": "create-react-prototype"
 }
