--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,12 +18,12 @@
     "react-dom": ">=16.2.0"
   },
   "devDependencies": {
-    "create-react-prototype": "1.1.1",
+    "create-react-prototype": "^1.2.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-rc.1",
+    "@babel/runtime": "^7.1.2",
     "classnames": "^2.2.6"
   },
   "repository": {
