--- a/packages/validator-pwned/package.json
+++ b/packages/validator-pwned/package.json
@@ -13,11 +13,11 @@
   "author": "Patrick Sachs",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "^7.0.0-rc.1",
+    "@babel/runtime": "^7.1.2",
     "js-sha1": "^0.6.0"
   },
   "devDependencies": {
-    "create-react-prototype": "1.1.1"
+    "create-react-prototype": "^1.2.1"
   },
   "generator": "create-react-prototype"
 }
