--- a/packages/validator-pwned/storybook/package.json
+++ b/packages/validator-pwned/storybook/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@react-formilicious/core": "link:../../core/dist",
-    "@react-formilicious/validator-pwned": "link:../dist",
+    "@react-formilicious/core": "file:../../core/dist",
+    "@react-formilicious/validator-pwned": "file:../dist",
     "@storybook/react": "^3.4.10",
     "babel-core": "^6.26.3",
     "react": "^16.2.0",
