Fixed package.json files

--- a/packages/bulma/package.json
+++ b/packages/bulma/package.json
@@ -33,6 +33,6 @@
     "type": "git",
     "url": "git+https://github.com/PatrickSachs/react-formilicious.git"
   },
-  "packageManager": "yarn",
+  "packageManager": "npm",
   "generator": "create-react-prototype"
 }
